--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@ ul {
   overflow: hidden;
 }
 li {
-  background-color: gray;
+  background-color: lightsalmon;
   float: right;
 }
 li a {
   display: block;
   border: solid black 1px;
+  padding: 10px;
 }
 
 .right {
@@ -22,4 +23,22 @@ li a {
 
 h1 {
   background-color: red;
+  opacity: 50%;
+}
+
+.fixed {
+  position: fixed;
+  top: 50%;
+  left: -5%;
+  width: 300px;
+  border: 3px solid #73ad21;
+  transform: rotate(270deg);
+}
+
+nav {
+  overflow: auto;
+}
+
+.main {
+  margin-left: 15%;
 }
